--- a/style.css
+++ b/style.css
@@ -10370,6 +10370,11 @@ body.home #main-content, .breadcrumb-sec { /* add top margin for header */
     text-transform: none!important;
 }
 
+.main-section .cs-blog h5, .main-section .cs-blog h5 a {
+    font-weight: bold;
+}
+
+
 /* CS THEME: DIVIDER */
 
 .cs-seprator .devider2 {
@@ -10813,13 +10818,14 @@ figure {
 	text-transform: none!important;
 }
 .prevnext, .socialmedia h6 {
-    font-size: 12pt!important;
+    font-size: 14pt!important;
     font-weight: bold!important;
     text-transform: uppercase!important;
 }
 .col-md-12.post-recent h2 {
     text-align: left!important;
 	margin-bottom: 20px!important;
+	font-size: 14pt!important;
 }
 .main-section blockquote {
 	font-size: 30px!important;
