Related Post title style

--- a/style.css
+++ b/style.css
@@ -10819,7 +10819,7 @@ figure {
 }
 .prevnext, .socialmedia h6 {
     font-size: 14pt!important;
-    font-weight: bold!important;
+    font-weight: 900!important;
     text-transform: uppercase!important;
 }
 .col-md-12.post-recent h2 {
