hamburger menu make 55vh height

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -88,7 +88,7 @@
 	.navigation .navbar-collapse{ overflow-x: inherit !important; overflow-y: inherit !important; position: absolute; /*top: 100%; left: 0;*/ background: #fff; max-height: inherit; width: 50%; z-index: 999; }
 
 	.navigation .navbar-collapse.collapse { display:none !important;}
-	.navigation .navbar-collapse.collapse.in{ display:block !important;}
+	.navigation .navbar-collapse.collapse.in{ display:block !important; }
 	.navigation .navbar-collapse.in{ overflow-x:hidden !important; overflow-y:auto !important; }
 	.navigation .navbar-collapse.in .navbar-nav, .navigation .navbar-collapsing .navbar-nav {height: 360px !important; overflow: auto !important;}
 
@@ -300,7 +300,7 @@
 	.navigation ul.mega-grid > li, .detail-post {width: 100%;float: left;}
 
 	.navigation .navbar-collapse.collapse { display:none !important;}
-	.navigation .navbar-collapse.collapse.in{ display:block !important;}
+	.navigation .navbar-collapse.collapse.in{ display:block !important; height: 55vh;}
 	.navigation .navbar-collapse.in{ overflow-x:hidden !important; overflow-y:auto !important; }
 
 	.navbar-default{ width: 100%;float: left;background-color: transparent;}
