--- a/style.css
+++ b/style.css
@@ -10557,6 +10557,9 @@ body.home section.contact-form {
 	color: #ffffff;
 	font-size: 20px;
 }
+.contact-form input[type="submit"]:hover {
+	 background-color: #F6CF3F;
+}
 
 .main-section h2, .main-section h2 a {
 	/* color: #000000 !important; */
